<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Growent</string>
    <string name="google_maps_key">"AIzaSyC4n3FWSVbeX7zfTzwPzYoWIM6knLtMwnk"</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_maps">Maps</string>
    <string name="e_mail">E-Mail</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sing_in">Sing in</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="text_continue">CONTINUE</string>
    <string name="name_text">Name</string>
    <string name="logo">Logo</string>
    <string name="icon">icon</string>
    <string name="find_you_account">Find You Account</string>
    <string name="find_your_account_button">FIND YOUR ACCOUNT</string>
    <string name="income">Income</string>
    <string name="what_is_your_monthly_income">What is your monthly income?</string>
    <string name="enter_your_income">Enter your income</string>
    <string name="add">ADD</string>
    <string name="place">Place</string>
    <string name="date">Date</string>
    <string name="add_movement">Add movement</string>
    <string name="configuration">Configuration</string>
    <string name="save_changues">SAVE CHANGUES</string>
    <string name="category">Chose one</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="debts">Debts</string>
    <string name="add_category">Add category</string>
    <string name="movement">Movement</string>
    <string name="my_profile">My Profile</string>
    <string name="my_profile_appercase">My profile</string>
    <string name="example_name">Alexander Giovanni Gamarra Tafur</string>
    <string name="log_out">Log Out</string>
    <string name="information_invalidate">Invalidate information</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="invalid_email">Invalid email</string>
    <string name="email_password_invalid">Email or password invalid</string>
    <string name="authentication_error">Authentication Error</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_your_information">Confirm your information</string>
    <string name="thanks_for_registering">Thanks for registering</string>
    <string name="welcome">Welcome</string>
    <string name="resume">Resume</string>
    <string name="outputs">Outputs</string>
    <string name="loading_resource">Loading</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_category">Select Category</string>
    <string name="title_activity_maps2">Map</string>


</resources>