<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.edu.upc.growent.activities.CategoryActivity">

    <RelativeLayout
        android:id="@+id/firstRelativeLayout"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/logo"
        />
    <TextView
        android:id="@+id/titleBalanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income"
        android:textColor="@color/white_text"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_title"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp" />

   <TextView
        android:id="@+id/subtitleBalanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_monthly_income"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstRelativeLayout"
        />
     <ImageView
        android:id="@+id/iconBalanceImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_monetization_on_teal_24dp"
        app:layout_constraintTop_toBottomOf="@id/subtitleBalanceTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/default_margin"
         android:contentDescription="@string/icon"
        />
    <EditText
        android:id="@+id/BalanceEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_your_income"
        android:maxLength="25"
        app:layout_constraintStart_toEndOf="@id/iconBalanceImageView"
        app:layout_constraintTop_toBottomOf="@id/subtitleBalanceTextView"
        android:layout_margin="@dimen/default_margin"
        android:textColor="@color/colorPrimaryDark"
        />
    <Button
        android:id="@+id/nextButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/text_continue"
        android:textColor="@color/white_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BalanceEditText"
        android:layout_margin="@dimen/margin_button"
        />

</android.support.constraint.ConstraintLayout>
