<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.edu.upc.growent.activities.ForgotPasswordActivity">
    <RelativeLayout
        android:id="@+id/firstRelativeLayout"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/logo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_you_account"
        android:textColor="@color/white_text"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_title"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp" />
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstRelativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:textColor="@color/secondary_text"
        android:inputType="textEmailAddress"
        android:labelFor="@id/emailEditText"
        />
    <Button
        android:id="@+id/findAccountButton"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:textColor="@color/white_text"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        android:layout_marginTop="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/find_your_account_button"
        android:textSize="16sp"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/RaisedButtonDark"
         />


</android.support.constraint.ConstraintLayout>
