<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.edu.upc.growent.activities.EditPerfilActivity">

    <RelativeLayout
        android:id="@+id/firstRelativeLayout"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/logo"
        />

    <ImageView
        android:id="@+id/arrowImageView"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:contentDescription="@string/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_white_24dp"
        android:layout_margin="@dimen/default_margin"

        />
    <TextView
        android:id="@+id/configurationBalanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        android:textColor="@color/white_text"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/arrowImageView"
        android:layout_margin="@dimen/margin_title"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp" />


    <ImageView
        android:id="@+id/iconNameImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_account_box_teal_24dp"
        app:layout_constraintTop_toBottomOf="@id/firstRelativeLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/icon"
        android:layout_margin="@dimen/default_margin"
        />
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:maxLength="25"
        app:layout_constraintStart_toEndOf="@id/iconNameImageView"
        app:layout_constraintTop_toBottomOf="@id/firstRelativeLayout"
        android:layout_margin="@dimen/default_margin"
        android:textColor="@color/colorPrimaryDark"
        />
    <ImageView
        android:id="@+id/iconEmailImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_mail_teal_24dp"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/icon"
        android:layout_margin="@dimen/default_margin"
        />
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"
        android:maxLength="25"
        app:layout_constraintStart_toEndOf="@id/iconNameImageView"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        android:layout_margin="@dimen/default_margin"
        android:textColor="@color/colorPrimaryDark"
        android:enabled="false"
        />

    <ImageView
        android:id="@+id/logoPasswordImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_lock_teal_24dp"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/icon"
        android:layout_margin="@dimen/default_margin"
        />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/colorPrimaryDark"
        android:maxLength="25"
        app:layout_constraintStart_toEndOf="@id/logoPasswordImageView"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        android:layout_margin="@dimen/default_margin"

        />

    <ImageView
        android:id="@+id/incomeImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_monetization_on_teal_24dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/icon"
        android:layout_margin="@dimen/default_margin"
        />

    <EditText
        android:id="@+id/incomeEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/income"
        android:textColor="@color/colorPrimaryDark"
        android:maxLength="25"
        app:layout_constraintStart_toEndOf="@id/incomeImageView"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:layout_margin="@dimen/default_margin"


        />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/save_changues"
        android:textColor="@color/white_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/incomeEditText"
        android:layout_margin="@dimen/margin_button"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</android.support.constraint.ConstraintLayout>
