<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="pe.edu.upc.growent.fragments.HomeFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/firstConstraintLayout"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.CardView
                android:id="@+id/totalCardView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/resumeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/default_margin"
                        android:text="@string/resume"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="23sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="13dp" />

                    <View
                        android:id="@+id/firstLineView"
                        android:layout_width="320dp"
                        android:layout_height="1dp"
                        android:layout_margin="@dimen/default_margin"
                        android:background="@color/secondary_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/resumeTextView"
                        tools:layout_editor_absoluteX="2dp" />

                    <TextView
                        android:id="@+id/incomeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/income"
                        android:textColor="@color/primary_text"
                        android:textSize="21sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/firstLineView"
                        tools:layout_editor_absoluteX="17dp" />

                    <TextView
                        android:id="@+id/outputsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/outputs"
                        android:textColor="@color/primary_text"
                        android:textSize="21sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/incomeTextView"
                        tools:layout_editor_absoluteX="17dp" />

                    <TextView
                        android:id="@+id/dataIncomeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="S/. 1,500"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="21sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/firstLineView"
                        tools:layout_editor_absoluteX="221dp" />

                    <TextView
                        android:id="@+id/dataOutputTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="S/.  850"
                        android:textColor="@color/red_text"
                        android:textSize="21sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/incomeTextView"
                        tools:layout_editor_absoluteX="231dp" />

                    <View
                        android:id="@+id/secondLineView"
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_margin="@dimen/default_margin"
                        android:background="@color/secondary_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dataOutputTextView"
                        tools:layout_editor_absoluteX="209dp" />

                    <TextView
                        android:id="@+id/totalTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="S/.  650"
                        android:textColor="@color/primary_text"
                        android:textSize="21sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/secondLineView"
                        tools:layout_editor_absoluteX="231dp" />
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/secondConstraintLayout"
            android:layout_width="350dp"
            android:layout_height="365dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstConstraintLayout">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/homeRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


</FrameLayout>
